--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,4 @@
-/* Add CSS Styling */
+.odd {
+    background-color: rgb(233, 194, 201);
+    font-family: Verdana, "DejaVu Sans", sans-serif;
+}/* Add CSS Styling */
