--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -10,6 +10,7 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
@@ -23,4 +24,18 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.images-container {
+  display: flex;
+  gap: 52px;
+  justify-content: center;
+}
+
+.plant-container {
+  width: 200px;
+}
+
+body {
+  text-align: center;
 }
